Optimize cache